[gd_scene load_steps=22 format=2]

[ext_resource path="res://stageOne.gd" type="Script" id=1]
[ext_resource path="res://stackathon-assets/background/Hills Layer 01.png" type="Texture" id=2]
[ext_resource path="res://ground-tile.tres" type="TileSet" id=3]
[ext_resource path="res://noCollision-tile.tres" type="TileSet" id=4]
[ext_resource path="res://physicToggleFloor.gd" type="Script" id=5]
[ext_resource path="res://toggleFloor.gd" type="Script" id=6]
[ext_resource path="res://win.gd" type="Script" id=7]
[ext_resource path="res://stackathon-assets/music/win.wav" type="AudioStream" id=8]
[ext_resource path="res://Area2D.gd" type="Script" id=9]
[ext_resource path="res://Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=11]
[ext_resource path="res://Enemy2.tscn" type="PackedScene" id=12]
[ext_resource path="res://movingPlatform.tscn" type="PackedScene" id=13]
[ext_resource path="res://KinematicBody2D.tscn" type="PackedScene" id=14]
[ext_resource path="res://lifeBar.tscn" type="PackedScene" id=15]
[ext_resource path="res://sceneTransition.tscn" type="PackedScene" id=16]
[ext_resource path="res://stackathon-assets/music/Blob-Monsters-on-the-Loose.ogg" type="AudioStream" id=17]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 93.6523, 11.0391 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 3.06403, 6.76398 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 8.60266, 7.24678 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 2.14642, 86.8485 )

[node name="stageOne" type="Node"]

script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="0"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 0.5, 0 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true
_sections_unfolded = [ "Scroll" ]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

editor/display_folded = true
motion_scale = Vector2( 1, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 320, 0 )
_sections_unfolded = [ "Motion" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer" index="0"]

position = Vector2( 0, -5.96046e-008 )
scale = Vector2( 0.771484, 0.886719 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -982985, 16, 0, -982984, 18, 0, -982983, 18, 0, -982982, 18, 0, -982981, 18, 0, -982980, 19, 0, -917449, 1610612755, 0, -917448, 1610612754, 0, -917447, 1610612754, 0, -917446, 1610612754, 0, -917445, 1610612754, 0, -917444, 1610612752, 0, -131050, 5, 0, -131049, 6, 0, -131048, 6, 0, -131047, 6, 0, -131046, 6, 0, -131045, 6, 0, -131044, 6, 0, -131043, 6, 0, -131042, 6, 0, -131041, 6, 0, -131040, 6, 0, -131039, 6, 0, -65514, 58, 0, 22, 58, 0, 65558, -1073741823, 0, 131100, 1610612736, 0, 196636, -1073741824, 0, 262172, -1073741824, 0, 327708, -1073741824, 0, 458780, -1073741824, 0, 524290, 13, 0, 524291, 14, 0, 524301, 60, 0, 524310, 15, 0, 589830, 15, 0, 589837, 60, 0, 589846, 15, 0, 655366, 15, 0, 655373, 60, 0, 655382, 15, 0, 720909, 60, 0, 720918, 15, 0, 786445, 60, 0, 786454, 18, 0 )
_sections_unfolded = [ "Cell" ]

[node name="TileMap2" type="TileMap" parent="." index="2"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -131038, 7, 0, -65513, 60, 0, -65512, 60, 0, -65511, 60, 0, -65510, 60, 0, -65509, 60, 0, -65508, 60, 0, -65507, 60, 0, -65506, 60, 0, -65505, 60, 0, -65504, 60, 0, -65503, 60, 0, -65502, 59, 0, 23, 60, 0, 24, 60, 0, 25, 60, 0, 26, 60, 0, 27, 60, 0, 28, 60, 0, 29, 60, 0, 30, 60, 0, 31, 60, 0, 32, 60, 0, 33, 60, 0, 34, 59, 0, 65559, 1610612736, 0, 65560, 1610612736, 0, 65561, 1610612736, 0, 65562, 1610612736, 0, 65563, 1610612736, 0, 65564, 1610612736, 0, 65565, 60, 0, 65566, 60, 0, 65567, 60, 0, 65568, 60, 0, 65569, 60, 0, 65570, 59, 0, 131100, -1073741824, 0, 131101, 60, 0, 131102, 60, 0, 131103, 60, 0, 131104, 60, 0, 131105, 60, 0, 131106, 59, 0, 196637, 60, 0, 196638, 60, 0, 196639, 60, 0, 196640, 60, 0, 196641, 60, 0, 196642, 59, 0, 262173, 60, 0, 262174, 60, 0, 262175, 60, 0, 262176, 60, 0, 262177, 60, 0, 262178, 59, 0, 327709, 60, 0, 327710, 60, 0, 327711, 60, 0, 327712, 60, 0, 327713, 60, 0, 327714, 59, 0, 393244, -1073741824, 0, 393245, 60, 0, 393246, 60, 0, 393247, 60, 0, 393248, 60, 0, 393249, 60, 0, 393250, 59, 0, 458758, 16, 0, 458759, 18, 0, 458760, 18, 0, 458761, 18, 0, 458762, 18, 0, 458763, 18, 0, 458764, 18, 0, 458765, 19, 0, 458774, 1, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458781, 60, 0, 458782, 60, 0, 458783, 60, 0, 458784, 60, 0, 458785, 60, 0, 458786, 59, 0, 524294, 17, 0, 524295, 15, 0, 524296, 15, 0, 524297, 15, 0, 524298, 15, 0, 524299, 15, 0, 524300, 15, 0, 524301, 20, 0, 524310, 58, 0, 524311, 60, 0, 524312, 60, 0, 524313, 60, 0, 524314, 60, 0, 524315, 60, 0, 524316, 60, 0, 524317, 60, 0, 524318, 60, 0, 524319, 60, 0, 524320, 60, 0, 524321, 60, 0, 524322, 59, 0, 589830, 17, 0, 589831, 15, 0, 589832, 15, 0, 589833, 15, 0, 589834, 15, 0, 589835, 15, 0, 589836, 15, 0, 589837, 20, 0, 589846, 58, 0, 589847, 60, 0, 589848, 60, 0, 589849, 60, 0, 589850, 60, 0, 589851, 60, 0, 589852, 60, 0, 589853, 60, 0, 589854, 60, 0, 589855, 60, 0, 589856, 60, 0, 589857, 60, 0, 589858, 59, 0, 655366, 17, 0, 655367, 15, 0, 655368, 15, 0, 655369, 15, 0, 655370, 15, 0, 655371, 15, 0, 655372, 15, 0, 655373, 20, 0, 655382, 58, 0, 655383, 60, 0, 655384, 60, 0, 655385, 60, 0, 655386, 60, 0, 655387, 60, 0, 655388, 60, 0, 655389, 60, 0, 655390, 60, 0, 655391, 60, 0, 655392, 60, 0, 655393, 60, 0, 655394, 59, 0, 720902, 17, 0, 720903, 15, 0, 720904, 15, 0, 720905, 15, 0, 720906, 15, 0, 720907, 15, 0, 720908, 15, 0, 720909, 20, 0, 720918, 58, 0, 720919, 60, 0, 720920, 60, 0, 720921, 60, 0, 720922, 60, 0, 720923, 60, 0, 720924, 60, 0, 720925, 60, 0, 720926, 60, 0, 720927, 60, 0, 720928, 60, 0, 720929, 60, 0, 720930, 59, 0, 786438, 17, 0, 786439, 15, 0, 786440, 15, 0, 786441, 15, 0, 786442, 15, 0, 786443, 15, 0, 786444, 15, 0, 786445, 20, 0, 786455, 60, 0, 786456, 60, 0, 786457, 60, 0, 786458, 60, 0, 786459, 60, 0, 786460, 60, 0, 786461, 60, 0, 786462, 60, 0, 786463, 60, 0, 786464, 60, 0, 786465, 60, 0, 786466, 59, 0 )
_sections_unfolded = [ "Cell", "Transform" ]

[node name="decoration" type="TileMap" parent="." index="3"]

editor/display_folded = true
mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1048547, 9, 0, -1048546, 10, 0, -1048545, 10, 0, -1048544, 10, 0, -1048543, 10, 0, -1048542, 10, 0, -1048541, 10, 0, -1048540, 11, 0, -1048517, 8, 0, -983013, 23, 0, -983012, 24, 0, -983011, 24, 0, -983010, 24, 0, -983009, 24, 0, -983008, 24, 0, -983007, 24, 0, -983006, 24, 0, -983005, 24, 0, -983004, 24, 0, -983003, 24, 0, -983002, 25, 0, -917477, 26, 0, -917476, 27, 0, -917475, 27, 0, -917474, 27, 0, -917473, 27, 0, -917472, 27, 0, -917471, 27, 0, -917470, 27, 0, -917469, 27, 0, -917468, 27, 0, -917467, 27, 0, -917466, 29, 0, -851941, 26, 0, -851940, 27, 0, -851939, 27, 0, -851938, 27, 0, -851937, 27, 0, -851936, 27, 0, -851935, 27, 0, -851934, 27, 0, -851933, 27, 0, -851932, 27, 0, -851931, 27, 0, -851930, 29, 0, -786405, 26, 0, -786404, 27, 0, -786403, 27, 0, -786402, 27, 0, -786401, 27, 0, -786400, 27, 0, -786399, 27, 0, -786398, 27, 0, -786397, 27, 0, -786396, 27, 0, -786395, 27, 0, -786394, 29, 0, -720869, 26, 0, -720868, 27, 0, -720867, 27, 0, -720866, 27, 0, -720865, 27, 0, -720864, 27, 0, -720863, 27, 0, -720862, 27, 0, -720861, 27, 0, -720860, 27, 0, -720859, 27, 0, -720858, 29, 0, -655333, 26, 0, -655332, 27, 0, -655331, 27, 0, -655330, 27, 0, -655329, 27, 0, -655328, 27, 0, -655327, 27, 0, -655326, 27, 0, -655325, 27, 0, -655324, 27, 0, -655323, 27, 0, -655322, 29, 0, -589797, 26, 0, -589796, 27, 0, -589795, 27, 0, -589794, 27, 0, -589793, 27, 0, -589792, 27, 0, -589791, 27, 0, -589790, 27, 0, -589789, 27, 0, -589788, 27, 0, -589787, 27, 0, -589786, 29, 0, -524261, 26, 0, -524260, 27, 0, -524259, 27, 0, -524258, 27, 0, -524257, 27, 0, -524256, 27, 0, -524255, 27, 0, -524254, 27, 0, -524253, 27, 0, -524252, 27, 0, -524251, 27, 0, -524250, 29, 0, -458725, 26, 0, -458724, 27, 0, -458723, 27, 0, -458722, 27, 0, -458721, 27, 0, -458720, 27, 0, -458719, 27, 0, -458718, 27, 0, -458717, 27, 0, -458716, 27, 0, -458715, 27, 0, -458714, 29, 0, -393189, 26, 0, -393188, 27, 0, -393187, 27, 0, -393186, 27, 0, -393185, 27, 0, -393184, 27, 0, -393183, 27, 0, -393182, 27, 0, -393181, 27, 0, -393180, 27, 0, -393179, 27, 0, -393178, 29, 0, -327653, 26, 0, -327652, 27, 0, -327651, 27, 0, -327650, 27, 0, -327649, 27, 0, -327648, 27, 0, -327647, 27, 0, -327646, 27, 0, -327645, 27, 0, -327644, 27, 0, -327643, 27, 0, -327642, 29, 0, -262117, 26, 0, -262116, 27, 0, -262115, 27, 0, -262114, 27, 0, -262113, 27, 0, -262112, 27, 0, -262111, 27, 0, -262110, 27, 0, -262109, 27, 0, -262108, 27, 0, -262107, 27, 0, -262106, 29, 0, -196581, 26, 0, -196580, 27, 0, -196579, 27, 0, -196578, 27, 0, -196577, 27, 0, -196576, 27, 0, -196575, 27, 0, -196574, 27, 0, -196573, 27, 0, -196572, 27, 0, -196571, 27, 0, -196570, 29, 0, -131037, 27, 0, -131036, 27, 0, -131035, 27, 0, -131034, 29, 0, -65501, 27, 0, -65500, 27, 0, -65499, 27, 0, -65498, 29, 0, 35, 27, 0, 36, 27, 0, 37, 27, 0, 38, 29, 0, 65571, 27, 0, 65572, 27, 0, 65573, 27, 0, 65574, 29, 0, 131107, 27, 0, 131108, 27, 0, 131109, 27, 0, 131110, 29, 0, 196643, 27, 0, 196644, 27, 0, 196645, 27, 0, 196646, 29, 0, 262179, 27, 0, 262180, 27, 0, 262181, 27, 0, 262182, 29, 0, 327715, 27, 0, 327716, 27, 0, 327717, 27, 0, 327718, 29, 0, 393224, 1, 0, 393239, 0, 0, 393240, 12, 0, 393241, 13, 0, 393242, 13, 0, 393243, 14, 0, 393251, 27, 0, 393252, 27, 0, 393253, 27, 0, 393254, 29, 0, 458754, 12, 0, 458755, 14, 0, 458787, 27, 0, 458788, 27, 0, 458789, 27, 0, 458790, 29, 0, 524288, 1, 0, 524290, 1, 0, 524302, 17, 0, 524303, 17, 0, 524304, 17, 0, 524305, 17, 0, 524306, 17, 0, 524307, 17, 0, 524308, 17, 0, 524309, 17, 0, 524323, 27, 0, 524324, 27, 0, 524325, 27, 0, 524326, 29, 0, 589824, 17, 0, 589825, 17, 0, 589826, 17, 0, 589827, 17, 0, 589828, 17, 0, 589829, 17, 0, 589838, 18, 0, 589839, 18, 0, 589840, 18, 0, 589841, 18, 0, 589842, 18, 0, 589843, 18, 0, 589844, 18, 0, 589845, 18, 0, 589859, 27, 0, 589860, 27, 0, 589861, 27, 0, 589862, 29, 0, 655360, 18, 0, 655361, 18, 0, 655362, 18, 0, 655363, 18, 0, 655364, 18, 0, 655365, 18, 0, 655374, 18, 0, 655375, 18, 0, 655376, 18, 0, 655377, 18, 0, 655378, 18, 0, 655379, 18, 0, 655380, 18, 0, 655381, 18, 0, 655395, 27, 0, 655396, 27, 0, 655397, 27, 0, 655398, 29, 0, 720896, 18, 0, 720897, 18, 0, 720898, 18, 0, 720899, 18, 0, 720900, 18, 0, 720901, 18, 0, 720910, 18, 0, 720911, 18, 0, 720912, 18, 0, 720913, 18, 0, 720914, 18, 0, 720915, 18, 0, 720916, 18, 0, 720917, 18, 0, 720931, 27, 0, 720932, 27, 0, 720933, 27, 0, 720934, 29, 0, 786467, 27, 0, 786468, 27, 0, 786469, 27, 0, 786470, 29, 0 )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="StaticBody2D" type="StaticBody2D" parent="decoration" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 5 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="decoration/StaticBody2D" index="0"]

position = Vector2( 526.984, -228.995 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="decoration" index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="decoration/Area2D" index="0"]

position = Vector2( 520.111, -246.913 )
shape = SubResource( 2 )

[node name="win" type="Area2D" parent="decoration" index="2"]

editor/display_folded = true
position = Vector2( 951.952, -248.003 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="decoration/win" index="0"]

shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="decoration/win" index="1"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="TileMap" type="TileMap" parent="decoration" index="3"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1048545, 0, 0, -1048539, 16, 0, -196585, 3, 0, -196577, 1, 0 )
_sections_unfolded = [ "Cell" ]

[node name="ladder" type="TileMap" parent="." index="4"]

editor/display_folded = true
mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -983008, 20, 0, -917472, 21, 0, -851936, 21, 0, -786400, 21, 0, -720864, 21, 0, -655328, 21, 0, -589792, 21, 0, -524256, 21, 0, -458720, 21, 0, -393184, 21, 0, -327648, 22, 0 )
_sections_unfolded = [ "Cell", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="ladder" index="0"]

editor/display_folded = true
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 9 )
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladder/Area2D" index="0"]

position = Vector2( 519.795, -153.151 )
shape = SubResource( 4 )

[node name="Player" parent="." index="5" instance=ExtResource( 10 )]

position = Vector2( 48.256, 67.9877 )

[node name="Enemy" parent="." index="6" instance=ExtResource( 11 )]

position = Vector2( 108.382, 77.4679 )

[node name="Enemy3" parent="." index="7" instance=ExtResource( 11 )]

position = Vector2( 359.832, -100.627 )
_sections_unfolded = [ "Collision" ]
size = Vector2( 3, 3 )
health = 7
attack = 3

[node name="Enemy4" parent="." index="8" instance=ExtResource( 11 )]

position = Vector2( 496, -272 )

[node name="Enemy2" parent="." index="9" instance=ExtResource( 12 )]

position = Vector2( 404.77, 82.9048 )
health = 3
attack = 2

[node name="movingPlatform" parent="." index="10" instance=ExtResource( 13 )]

position = Vector2( 256, 1.26489 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="movingPlatformTest" parent="." index="11" instance=ExtResource( 14 )]

position = Vector2( 635.309, -210.14 )
_sections_unfolded = [ "Visibility" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="12"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="lifeBar" parent="CanvasLayer" index="0" instance=ExtResource( 15 )]

editor/display_folded = true
margin_left = 3.0
margin_top = 4.0
margin_right = 47.0
margin_bottom = 48.0

[node name="TextureProgress" parent="CanvasLayer/lifeBar/HBoxContainer" index="1"]

value = 5.0

[node name="transitionCanvas" type="CanvasLayer" parent="." index="13"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="sceneTransition" parent="transitionCanvas" index="0" instance=ExtResource( 16 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="14"]

stream = ExtResource( 17 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="toggleFloorEnter" from="decoration/Area2D" to="decoration/StaticBody2D" method="_on_Area2D_toggleFloorEnter"]

[connection signal="toggleFloorLeave" from="decoration/Area2D" to="decoration/StaticBody2D" method="_on_Area2D_toggleFloorLeave"]

[connection signal="body_entered" from="decoration/win" to="decoration/win" method="_on_win_body_entered"]

[connection signal="off_ladder" from="ladder/Area2D" to="Player" method="_on_Area2D_off_ladder"]

[connection signal="on_ladder" from="ladder/Area2D" to="Player" method="_on_Area2D_on_ladder"]

[connection signal="healthChange" from="Player" to="CanvasLayer/lifeBar" method="_on_Player_healthChange"]

[connection signal="fade_finished" from="transitionCanvas/sceneTransition" to="Player" method="_on_sceneTransition_fade_finished"]


[editable path="CanvasLayer/lifeBar"]
